# onto-annotate

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pypi_publish.yml
config/: config.example.yml
data/demo_data/: README
scripts/: run_pipeline.py
src/onto_annotate/: cli.py  entity_type_helper.py
src/onto_annotate/demo_data/: conditions_complex-questions.tsv  conditions_simple.tsv
src/tests/: test_cli_basic.py  test_config.py
toy_data/raw_data_conditions/: conditions_complex-questions.tsv
