[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onto-annotate"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
onto-annotate = "onto_annotate.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "click>=8.1"]
