[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "onto-annotate"
dynamic = ["version"]
description = "Annotate text to ontology terms with optional AI assistance."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Trish Whetzel" }]
keywords = ["ontology", "annotation", "OAK", "SemSQL", "harmonization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Pin the real runtime deps you use
dependencies = [
  "click>=8.1",
  "pandas>=2.0",
  "numpy>=1.24",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "oaklib>=0.6.23",
  "requests>=2.31",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]  # only needed when LLM assist is used
dev = ["pytest", "pytest-cov", "ruff", "mypy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/twhetzel/onto-annotate"
Issues = "https://github.com/twhetzel/onto-annotate/issues"

[project.scripts]
onto-annotate = "onto_annotate.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
include = [
  "src/onto_annotate/demo_data/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/onto_annotate"]

